--- a/src/app/views/scripts/view/fullrecord.phtml
+++ b/src/app/views/scripts/view/fullrecord.phtml
@@ -3,32 +3,14 @@
     <? if ($this->etd->status() != "published"): ?>
      <p class="note">This record is not published. Current status: <b><?= $this->etd->status() ?></b></p>
     <? endif ?>
-<? if ($this->acl->isAllowed($this->role, "authorInfo", "edit")): ?>
- <? if (isset($this->etd->authorInfo)): ?>
-   <a class="action" href="<?= $this->url(array("controller" => "authorInfo", "action" => "edit",
-         "pid" => $this->etd->authorInfo->pid), '', true, false); ?>">edit contact information</a>
- <? else: ?>
-   <a class="action" href="<?= $this->url(array('controller' => 'authorInfo', 'action' => 'new',
-      'etd' => $this->etd->pid), '', true, false) ?> ">enter contact information</a>
- <? endif ?>
-<? endif ?>      
+     
+<h1>
+     <?= $this->etd->title() ?>
+     <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+       <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "title")) ?>">edit</a>
+     <? endif ?>
+</h1>
 
-  
-<? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "title")) ?>">edit title</a>
-<? endif ?>
-<h1><?= $this->etd->title() ?></h1>
-<? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "record")) ?>">edit thesis information</a>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "faculty")) ?>">edit committee/adviser</a>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit rights/restrictions</a>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "researchfield")) ?>">edit research fields</a>
-  <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "program")) ?>">edit school/program</a>
-  <? if ($this->etd->schoolId() == "rollins"): ?>
-    <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "partneringagency")) ?>">edit partnering agency</a>   
-  <? endif ?> 
-<? endif ?>
 <? if ($this->acl->isAllowed($this->role, $this->etd, "edit school")): ?>
   <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "school")) ?>">edit school</a>
 <? endif ?>
@@ -38,7 +20,13 @@
 <? endif?>  
 
 
-  <h2>Abstract</h2>
+  <h2>
+      Abstract
+      <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+         <? $edit_label = ($this->etd->abstract_word_count()) ? 'edit' : 'add your abstract'; ?>
+         <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "abstract")) ?>">(<?= $edit_label ?>)</a>
+      <? endif ?>
+  </h2>
    <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
      <? $pq = Zend_Registry::get("proquest-config"); ?>
      <? if ($this->etd->abstract_word_count() > $pq->abstract_max_words): ?>
@@ -46,9 +34,6 @@
      <? if (! $this->etd->isHonors()): ?>ProQuest<? endif ?> maximum length for abstracts is <?= $pq->abstract_max_words ?> words.
      (current word count: <?= $this->etd->abstract_word_count() ?>)</p>
      <? endif ?>
-     <? $edit_label = ($this->etd->abstract_word_count()) ? 'edit' : 'add your abstract'; ?>
-     <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "abstract")) ?>"><?= $edit_label ?><a>
-
    <? endif ?>
   <div id="abstract">
    <? if ($this->etd->isEmbargoed() && $this->etd->mods->isEmbargoRequested(etd_mods::EMBARGO_ABSTRACT)): ?>
@@ -61,14 +46,15 @@
    <? endif ?>  
   </div>
 
-  <h2>Table of Contents</h2>
-    <? $toc = $this->etd->tableOfContents(); /* save TOC contents and re-use for content checking / display */ ?>
-    <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+  <h2>
+      Table of Contents
+      <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+      <? $toc = $this->etd->tableOfContents(); /* save TOC contents and re-use for content checking / display */ ?>
       <? $edit_label = ($toc == '' || $toc == '<div id="contents"/>' ) ? 'add your table of contents' : 'edit'; ?>
-      <a class="action" 
-        href="<?= $this->url(array("controller" => "edit", "action" => "contents")) ?>"><?= $edit_label ?></a>
+      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "contents")) ?>">(<?= $edit_label ?>)</a>
      <? endif ?>
-  <div id="toc">
+  </h2>
+    <div id="toc">
    <? if ($this->etd->isEmbargoed() && $this->etd->mods->isEmbargoRequested(etd_mods::EMBARGO_TOC)): ?>
     <p>Access restricted until <b><?= $this->etd->mods->embargo_end ?></b></p>
    <? endif ?>
