--- a/trunk/src/app/views/scripts/submission/_reviewinfo.phtml
+++ b/trunk/src/app/views/scripts/submission/_reviewinfo.phtml
@@ -1,10 +1,11 @@
 <div class="fullrecord">
   <div id="access">
-   <h2>Access Restrictions</h2>
-      <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-	<a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit access restrictions</a>
+   <h2>
+       Access Restrictions
+       <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+    <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit access restrictions</a>
       <? endif ?>
-
+   </h2>
 	   Access restrictions requested?
 	   <? if ($this->etd->mods->isEmbargoRequested()): ?>
 	      <b>yes:
@@ -21,23 +22,28 @@ if ($this->etd->mods->isEmbargoRequested(etd_mods::EMBARGO_ABSTRACT)) $restricte
 
  <? if ($this->etd->isRequired("send to ProQuest")): ?>	   
   <div id="proquest">
-   <h2>ProQuest Submission Information</h2>
-    <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
-      <a class="action" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit copyright</a>
+   <h2>
+       ProQuest Submission Information
+       <? if ($this->acl->isAllowed($this->role, $this->etd, "edit metadata")): ?>
+      <a class="record-edit" href="<?= $this->url(array("controller" => "edit", "action" => "rights")) ?>">edit copyright</a>
     <? endif ?>
+   </h2>
 
    <p>Sending to ProQuest? <b><?= $this->etd->mods->submitToProquest() ? "yes" : "no"; ?></b></p>
    <p>Applying for copyright? <b><?= $this->etd->mods->copyright ?></b></p>
+    
   </div>
 <? endif ?>
      
   <div id="contact">
-    <h2>Contact information</h2>
-   <? if ($this->acl->isAllowed($this->role, "authorInfo", "edit")): ?>
-      <a class="action" href="<?= $this->url(array("controller" => "authorInfo", "action" => "edit",
+    <h2>
+        Contact information
+        <? if ($this->acl->isAllowed($this->role, "authorInfo", "edit")): ?>
+      <a class="record-edit" href="<?= $this->url(array("controller" => "authorInfo", "action" => "edit",
 		"pid" => $this->etd->authorInfo->pid), '', true) ?>">edit contact information</a>
     <? endif ?>
-    <? $this->user = $this->etd->authorInfo; ?>
+    </h2>
+       <? $this->user = $this->etd->authorInfo; ?>
     <?=  $this->render('author-info/_view.phtml'); ?>
 
   </div>
