--- a/src/app/views/scripts/submission/_status.phtml
+++ b/src/app/views/scripts/submission/_status.phtml
@@ -11,12 +11,13 @@
  $incomplete = "<span class='incomplete'>&#x2717;</span>"; // red x
  $optional = "<span class='optional'>&#x2717;</span>"; // blue x
 ?>
-<h2>submission status</h2>
+<h2 style="margin-bottom: 7px;">submission status</h2>
 
 <div class="status-key">
-   <div><span><?= $ok ?></span> = completed field</div>
-   <div><span><?= $incomplete ?></span> = required incomplete field</div>
-   <div><span><?= $optional ?></span> = optional incomplete field</div>
+   <div><span><?= $incomplete ?></span> = required</div>
+   <div><span><?= $optional ?></span> = optional</div>
+    <div><span><?= $ok ?></span> = completed</div>
+   
 </div>
 <? if (isset($etd->authorInfo)): ?>
    <? $authorInfo_url = $this->url(array("controller" => "authorInfo", "action" => "view",
