--- a/trunk/src/app/views/scripts/submission/start.phtml
+++ b/trunk/src/app/views/scripts/submission/start.phtml
@@ -1,7 +1,7 @@
 <?= $this->javascript("jquery.local.js"); ?>
 <noscript style="color:red">The submission process requires that you enable Javascript.</noscript>
 
-<p>Please answer the follow questions before you begin creating your record.</p>
+<p>Please answer the following questions before you begin creating your record.</p>
 
 <? if ($this->form_errors): ?>
 <div id="messages">
@@ -68,10 +68,10 @@
     </div>
    </div>
 </li>
+
+<li><p>Enter your thesis or dissertation title to begin the submission process.</p></li>
       
 </ol>
-
-<p>Enter your thesis or dissertation title to begin the submission process.</p>
 
 <!-- TODO: label needs to be bold, input field needs to be much longer -->
 <div>
