--- a/trunk/src/app/views/scripts/submission/start.phtml
+++ b/trunk/src/app/views/scripts/submission/start.phtml
@@ -26,45 +26,106 @@
    action="<?= $this->url(array("action" => "start"))?>"> 
 
 <ol id="screening-questions">
- <li><p>Have you included any copyrighted material in your thesis or dissertation?</p>
+ <li><p>
+         Have you included any text, audio-visual, or other material not
+         created by you or for which you no longer control copyright?
+     </p>
     <?= $this->formRadio('copyright', $this->answers['copyright'], 
         array('class' => 'required-field'), $this->yes_no) ?>
      <? /* copyright details: display if answer to copyright question is YES */ ?>
     <div id="copyright_yes"> 
-      <p>1b. Have you obtained permission to include that copyrighted material in your thesis or dissertation?</p>
+      <p>
+          1b. Have you obtained permission to use these materials? (Examples of
+          materials for which you may need permission include long
+          quotations, images, articles you authored for which you no
+          longer own copyright.)
+      </p>
+
+      <p>Please Note:</p>
+
+      <p>
+          Materials in the public domain or materials that fit the Fair Use
+          parameters of the 
+          <a href="http://www.copyright.gov/fls/fl102.html" target="_blank">U.S. Copyright Law</a>
+          DO NOT REQUIRE permission.
+      </p>
+
+      <p>
+          See the 
+          <a href="https://classes.emory.edu/webapps/lobj-wiki-bb_bb60/wiki_home/Handler?course_id=_11416_1&content_id=_1251529_1"
+             target="_blank">Copyright Education Initiative</a>
+          on Blackboard for more information on the public domain, fair use,
+          the permissions process,
+          and example permission letters.
+      </p>
       <?= $this->formRadio("copyright_permission", $this->answers["copyright_permission"], array(),
 			      $this->yes_no) ?>
+    </div>
     <? /* copyright permission details */ ?>
     <div id="copyright_perms_no">  <? /*  Show if answered NO to permissions */ ?> 
-        <p>You must obtain these permissions before you can continue with the submission process.
-    Contact Lisa Macklin (<a href="mailto:lisa.macklin@emory.edu">lisa.macklin@emory.edu</a>) or
-    Heather Williams (<a href="mailto:hrwilli@emory.edu">hrwilli@emory.edu</a>) if you have any questions.</p>
+        <p>
+            If you have not obtained necessary permissions, you must obtain
+            permissions or remove the copyrighted content from your ETD
+            before proceeding with submission.  Please contact Lisa Macklin or
+            Melanie Kowalski of the Libraries Scholarly Communication Office
+            at <a href="mailto:scholcomm@listserv.cc.emory.edu">scholcomm@listserv.cc.emory.edu</a>
+            if you have questions.
+        </p>
       </div>
-     <div id="copyright_perms_yes"> <? /*  Show if answered YES to permissions */ ?> 
-    <p>Complete Part 4 of the Submission Form.</p>
-    </div>
+<!--     <div id="copyright_perms_yes"> <? /*  Show if answered YES to permissions */ ?>
+            <p>Complete Part 4 of the Submission Form.</p>
+      </div>-->
  </li>
 
- <li><p>Does your thesis or dissertation disclose or describe any inventions or discoveries that could potentially have commercial application and therefore warrant patenting?  (If you and/or your faculty advisor(s) have any questions about making this determination, please contact the Emory Office of Technology Transfer at <a href="mailto:ott-web@emory.edu">ott-web@emory.edu</a>).</p>
+ <li><p>Does your thesis or dissertation disclose or describe any 
+         inventions or discoveries that could potentially have commercial 
+         application and therefore may be patented? (If you and/or your 
+         faculty advisor(s) have any questions about patents and commercial 
+         applications, please contact the Emory Office of Technology Transfer 
+         at <a href="mailto:ott-web@emory.edu">ott-web@emory.edu</a>).
+     </p>
     <?= $this->formRadio("patent", $this->answers["patent"],
        array('class' => 'required-field'), $this->yes_no) ?>
   <div id="patent_yes">   <? /* display only if yes to patent */ ?>	 
-     <p>The technology transfer and patenting process necessitates further conversation with ETD administrators before you can continue with the ETD submission process.  Please contact ETD Help at <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a> or call (404)727-5301.</p>
+     <p>
+         If your ETD describes an invention or discovery that may be 
+         patented, further conversation with ETD administrators is required 
+         before you can continue with the ETD submission process. Please 
+         contact ETD Help at <a href="mailto:etd-admin@listerv.cc.emory.edu">etd-admin@listerv.cc.emory.edu</a> or 
+         call (404)727-5301.
+     </p>
      <? /* TODO: use configured email; remove phone number? */ ?>
   </div>
 </li>
 
-<li><p>Are you requesting an access restriction (see Part 3 below) for your thesis or dissertation?</p>
+<li><p>Are you requesting an access restriction for your thesis or dissertation?</p>
         <?= $this->formRadio("embargo", ($this->answers["embargo"] == null ? null : $this->answers["embargo"]),
 			     array('class' => 'required-field'), $this->yes_no) ?>
     <div id="embargo_yes">    <? /* display if answer to embargo is yes */ ?>
-     <p>Please indicate how long you intend to restrict access to your dissertation or thesis on the Submission Form. You will also need to indicate your request for an access restriction during the submission process itself.
+     <p>
+         Please indicate how long you intend to restrict access to your 
+         dissertation or thesis on the Submission Form. You will also need to 
+         indicate your request for an access restriction during the 
+         submission process itself.
      </p>
 
-    <p>3b. Should your abstract and/or table of contents be included in the access restriction?</p>
+    <p>
+        3b. The ETD system allows for both full and partial embargo of your 
+        work. A partial embargo will allow visitors to read your abstract 
+        and/or table of contents while the full text of your thesis or 
+        dissertation is embargoed. A full embargo allows to you hide this 
+        information for the duration of the embargo period. Should your 
+        abstract and/or table of contents be included in the access restriction?
+    </p>
         <?= $this->formRadio("embargo_abs_toc", ($this->answers["embargo_abs_toc"] == null ? null : $this->answers["embargo_abs_toc"]), array('class' => 'required-field'), $this->yes_no) ?>
     <div id="embargo_abs_toc_yes">  <? /* display only if restricting abstract/toc */ ?>
-      <p>You will need to restrict access to your abstract and/or your table of contents once you have uploaded you document to the ETD repository. If you have already submitted your document to the ETD repository, you can log in and make appropriate changes to your record while it is in draft form.</p>
+      <p>
+          You will need to restrict access to your abstract and/or your 
+          table of contents once you have uploaded you document to the ETD 
+          repository. If you have already submitted your document to the ETD 
+          repository, you can log in and make appropriate changes to your 
+          record while it is in draft form.
+      </p>
     </div>
    </div>
 </li>
