[Finishes #33229631] changed label from date valid to date valid for mailing address

--- a/src/app/views/scripts/author-info/edit.phtml
+++ b/src/app/views/scripts/author-info/edit.phtml
@@ -131,7 +131,7 @@ permanent address
 
 
 <p>
-        <span class = "<?= $class; ?>" > date valid (yyyy-mm-dd)</span>
+        <span class = "<?= $class; ?>" > date valid for mailing address (yyyy-mm-dd)</span>
         <br/>
         <?= $this->formText("perm-date", (isset($this->allParams["perm-date"]) ? $this->allParams["perm-date"] : $this->authorInfo->mads->permanent->date)); ?>
 </p>
