--- a/src/app/views/scripts/edit/faculty.phtml
+++ b/src/app/views/scripts/edit/faculty.phtml
@@ -75,9 +75,9 @@ function addNonemoryChair() {
 
 <p>Enter the last name of an Emory faculty member in the appropriate box.
     After the system retrieves a list of matching faculty, select the
-    appropriate faculty.</p>
+    appropriate person.</p>
 <ul>
-  <li>If you make an incorrect selection, click remove and re-enter the name
+  <li>If you make an incorrect selection, click <span style="text-decoration: underline">remove</span> and re-enter the name
       in the box.</li>
   <li>You can reorder the list of committee members by clicking on and
       dragging the names.</li>
